add comment & secrets inherit perm

--- a/.github/workflows/images-main.yaml
+++ b/.github/workflows/images-main.yaml
@@ -26,3 +26,5 @@ jobs:
     with:
       environment: dev
       image: prefect-operator-dev
+    # this is required so that the workflow can read secrets rom the environment
+    secrets: inherit
