workflow linting, failure workflow

--- a/.github/workflows/helm-unittest.yaml
+++ b/.github/workflows/helm-unittest.yaml
@@ -1,7 +1,6 @@
 ---
 # https://github.com/marketplace/actions/helm-unit-tests
-
-name: Run Helm unit tests
+name: Run Helm Unit Tests
 
 "on":
   pull_request:
