--- a/.github/workflows/validate-updatecli-config.yaml
+++ b/.github/workflows/validate-updatecli-config.yaml
@@ -1,5 +1,5 @@
 ---
-name: Validate updatecli config
+name: Validate Updatecli Config
 
 "on":
   pull_request:
@@ -8,16 +8,14 @@ name: Validate updatecli config
     paths:
       - .github/updatecli/**
 
-# Do not grant jobs any permissions by default
 permissions: {}
 
 jobs:
-  validate_updatecli_config:
+  validate_updatecli_configs:
     runs-on: ubuntu-latest
     permissions:
       # required to read from the repo
       contents: read
-
     steps:
       - name: checkout
         uses: actions/checkout@v4
@@ -25,6 +23,5 @@ jobs:
       - name: install updatecli
         uses: updatecli/updatecli-action@v2
 
-      - name: run updatecli diff to validate config
-        run: |
-          updatecli diff --config .github/updatecli/manifest.yaml
+      - name: validate manifest
+        run: updatecli diff --config .github/updatecli/manifest.yaml
