--- a/.github/workflows/updatecli.yaml
+++ b/.github/workflows/updatecli.yaml
@@ -24,4 +24,5 @@ jobs:
         uses: prefecthq/actions-updatecli-apply@main
         with:
           manifest-path: .github/updatecli/manifest.yaml
+          run-helm-docs: true
           run-type: minor
