Fix operatorVersion output
Related to https://linear.app/prefect/issue/PLA-343/automatically-update-prefect-operator-helm-chart-versions-in-ccd-to

--- a/.github/workflows/helm-release.yaml
+++ b/.github/workflows/helm-release.yaml
@@ -34,9 +34,10 @@ jobs:
           echo "RELEASE_VERSION=$(date +'%Y.%-m.%-d%H%M%S')" >> $GITHUB_ENV
 
           # This ensures that the latest tag we grab will be of the operator image, and not the helm chart
-          echo "IMAGE_VERSION=$(\
+          echo "OPERATOR_VERSION=$(\
           git ls-remote --tags --refs --sort="v:refname" \
-          origin 'v[0-9].[0-9].[0-9]' | tail -n1 | sed 's/.*\///' | sed 's/v//')" >> $GITHUB_ENV
+          origin 'v[0-9].[0-9].[0-9]' | tail -n1 | sed 's/.*\///'
+          )" >> $GITHUB_ENV
 
       - name: Output versions as GitHub Outputs
         id: output_versions
