Quote GITHUB_ENV
Co-authored-by: Jamie Zieziula <jamie@prefect.io>

--- a/.github/workflows/images-main.yaml
+++ b/.github/workflows/images-main.yaml
@@ -44,7 +44,7 @@ jobs:
       - name: Get image version
         run: |
           short_sha="$(git rev-parse --short=7 HEAD)"
-          echo "SHORT_SHA=$short_sha" >> "$GITHUB_ENV"
+          echo "SHORT_SHA=$short_sha" >> $GITHUB_ENV
 
       - name: Run workflow
         run: |
