--- a/.github/workflows/helm-unittest.yaml
+++ b/.github/workflows/helm-unittest.yaml
@@ -13,6 +13,7 @@ permissions: {}
 
 jobs:
   unittest:
+    name: Run Helm Unit Tests
     runs-on: ubuntu-latest
     permissions:
       # required to read from the repo
