--- a/.github/workflows/images-main.yaml
+++ b/.github/workflows/images-main.yaml
@@ -8,6 +8,7 @@ name: Build and Push Images on Merge to Main
     paths:
       - api/**
       - cmd/**
+      - deploy/charts/**
       - internal/**
       - Dockerfile
 
