--- a/.github/workflows/helm-release.yaml
+++ b/.github/workflows/helm-release.yaml
@@ -96,12 +96,12 @@ jobs:
           mkdir -p /tmp/chart
           cd deploy/charts
           # Update the operator version tag in values.yaml
-          sed -i "s/tag:.*$/tag: $IMAGE_VERSION/g" prefect-operator/values.yaml
+          sed -i "s/tag:.*$/tag: $OPERATOR_VERSION/g" prefect-operator/values.yaml
           helm package prefect-operator \
             --destination /tmp/chart \
             --dependency-update \
             --version $RELEASE_VERSION \
-            --app-version v$IMAGE_VERSION \
+            --app-version v$OPERATOR_VERSION \
             --sign --key 'jamie@prefect.io' \
             --keyring $SIGN_KEYRING \
             --passphrase-file $SIGN_PASSPHRASE_FILE
@@ -126,7 +126,7 @@ jobs:
             --title $RELEASE_VERSION \
             --latest=false \
             --notes "Packaged with prefect-operator version \
-            [v$IMAGE_VERSION](https://github.com/PrefectHQ/prefect-operator/releases/tag/v$IMAGE_VERSION)"
+            [v$OPERATOR_VERSION](https://github.com/PrefectHQ/prefect-operator/releases/tag/v$OPERATOR_VERSION)"
         env:
           GH_TOKEN: ${{ github.token }}
 
