Update field descriptions in CRDs
Updates a couple fields in the CRDs to trigger a change to make sure
CRD updates are populated into the cluster automatically.

Related to PLA-406

--- a/deploy/charts/prefect-operator/crds/prefect.io_prefectservers.yaml
+++ b/deploy/charts/prefect-operator/crds/prefect.io_prefectservers.yaml
@@ -55,8 +55,8 @@ spec:
                   the server Deployment
                 type: object
               ephemeral:
-                description: Ephemeral defines whether the server will be deployed
-                  with an ephemeral storage backend
+                description: Ephemeral defines whether the Prefect Server will be
+                  deployed with an ephemeral storage backend
                 type: object
               extraContainers:
                 description: ExtraContainers defines additional containers to add
