add short names for both crds

--- a/deploy/charts/prefect-operator/crds/prefect.io_prefectservers.yaml
+++ b/deploy/charts/prefect-operator/crds/prefect.io_prefectservers.yaml
@@ -12,6 +12,8 @@ spec:
     listKind: PrefectServerList
     plural: prefectservers
     singular: prefectserver
+    shortNames:
+    - ps
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
