--- a/deploy/charts/prefect-operator/crds/prefect.io_prefectworkpools.yaml
+++ b/deploy/charts/prefect-operator/crds/prefect.io_prefectworkpools.yaml
@@ -12,6 +12,8 @@ spec:
     listKind: PrefectWorkPoolList
     plural: prefectworkpools
     singular: prefectworkpool
+    shortNames:
+    - pwp
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
