Support setting extra args in Deployment command
Supports setting extra args in the Deployment command.

This will allow us to set `--no-ui` in cases where we don't need to
serve the UI.

Related to https://linear.app/prefect/issue/PLA-452/cycle-5-catch-all

--- a/deploy/charts/prefect-operator/crds/prefect.io_prefectservers.yaml
+++ b/deploy/charts/prefect-operator/crds/prefect.io_prefectservers.yaml
@@ -60,6 +60,12 @@ spec:
                 description: Ephemeral defines whether the Prefect Server will be
                   deployed with an ephemeral storage backend
                 type: object
+              extraArgs:
+                description: ExtraArgs defines additional arguments to pass to the
+                  Prefect Server Deployment
+                items:
+                  type: string
+                type: array
               extraContainers:
                 description: ExtraContainers defines additional containers to add
                   to the Prefect Server Deployment
