--- a/.github/workflows/helm-release.yaml
+++ b/.github/workflows/helm-release.yaml
@@ -150,7 +150,7 @@ jobs:
           gh workflow run update-operator-versions.yaml \
             --repo prefecthq/cloud2-cluster-deployment \
             --ref main \
-            -f image_version=${image_version} \
+            -f image_version=${operator_version} \
             -f chart_version=${{ needs.release.outputs.releaseVersion }} \
             -f mode=${{ inputs.mode }} \
             -f operator=prefect-operator
