chore(actions): add workflow to update mise tools
Adds a workflow to update tools managed by mise.

Related to https://linear.app/prefect/issue/PLA-961/automate-updating-dependencies-defined-in-mise

--- a/.github/workflows/notify-on-failure.yaml
+++ b/.github/workflows/notify-on-failure.yaml
@@ -8,6 +8,7 @@ name: Notify on Failure
       - Build and Push Images on Tags
       - Release Prefect Operator Helm Chart
       - Updatecli Dependency Updates
+      - Update mise tool versions
     types: [completed]
 
 permissions: {}
