docs: automatically generate markdown documentation for both CRDs

--- a/.mise.toml
+++ b/.mise.toml
@@ -4,6 +4,7 @@ ginkgo = '2.22.2'
 golang = '1.23'
 golangci-lint = '1.61.0'
 'go:golang.org/x/tools/cmd/goimports' = '0.25.0'
+'go:fybrik.io/crdoc' = 'latest'
 helm = '3.15'
 helm-ct = '3.11.0'
 helm-docs = '1.13.1'
