tools: update samples to have example labels and more samples enabled by default

--- a/deploy/samples/v1_prefectserver_ephemeral.yaml
+++ b/deploy/samples/v1_prefectserver_ephemeral.yaml
@@ -6,3 +6,9 @@ metadata:
     app.kubernetes.io/managed-by: kustomize
   name: prefect-ephemeral
 spec:
+  deploymentLabels:
+    deployment: label
+    foo: bar
+  serviceLabels:
+    service: label
+    fuzz: buzz
