--- a/deploy/samples/v1_prefectworkpool_external_prefect_server.yaml
+++ b/deploy/samples/v1_prefectworkpool_external_prefect_server.yaml
@@ -6,6 +6,8 @@ metadata:
     app.kubernetes.io/managed-by: kustomize
   name: external-pool
 spec:
+  deploymentLabels:
+    deployment: label
   type: process
   server:
     remoteApiUrl: https://my-server.example.com
