--- a/deploy/samples/v1_prefectworkpool_process.yaml
+++ b/deploy/samples/v1_prefectworkpool_process.yaml
@@ -6,6 +6,8 @@ metadata:
     app.kubernetes.io/managed-by: kustomize
   name: sample-pool
 spec:
+  deploymentLabels:
+    deployment: label
   type: process
   server:
     name: prefect-sqlite
