--- a/deploy/samples/v1_prefectworkpool_azure.yaml
+++ b/deploy/samples/v1_prefectworkpool_azure.yaml
@@ -1,12 +1,1 @@
-apiVersion: prefect.io/v1
-kind: PrefectWorkPool
-metadata:
-  labels:
-    app.kubernetes.io/name: prefect-operator
-    app.kubernetes.io/managed-by: kustomize
-  name: sample-pool
-spec:
-  type: process
-  server:
-    name: prefect-sqlite
-  workers: 3
+# TODO: Create and validate working Azure Spec
