--- a/.github/workflows/build-and-push-image.yaml
+++ b/.github/workflows/build-and-push-image.yaml
@@ -12,6 +12,11 @@ name: Build and Push Image
         description: Image name (without the tag & registry)
         required: true
         type: string
+      docker-login:
+        description: Whether to log in to Docker Hub
+        required: false
+        type: boolean
+        default: true
       push:
         description: Whether to push the image to the registry
         required: false
@@ -34,6 +39,7 @@ jobs:
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
+        if: ${{ inputs.docker-login }}
         with:
           # These credentials are managed in Terraform. Depending on the 'environment' value above,
           # these will either be the credentials for 'dev' or 'prod'.
