--- a/.github/workflows/images-prs.yaml
+++ b/.github/workflows/images-prs.yaml
@@ -40,6 +40,7 @@ jobs:
       id-token: write
       security-events: write
     with:
+      docker-login: false
       push: false
       environment: dev
       image: prefect-operator-dev
