--- a/.github/workflows/images-prs.yaml
+++ b/.github/workflows/images-prs.yaml
@@ -1,5 +1,5 @@
 ---
-name: Build and Push Images on Pull Requests
+name: Build Images on Pull Requests
 
 "on":
   pull_request:
@@ -40,6 +40,7 @@ jobs:
       id-token: write
       security-events: write
     with:
+      docker-login: false
       push: false
       environment: dev
       image: prefect-operator-dev
