--- a/deploy/charts/prefect-operator/templates/rbac.yaml
+++ b/deploy/charts/prefect-operator/templates/rbac.yaml
@@ -95,6 +95,16 @@ rules:
       - get
       - patch
       - update
+  - apiGroups: ["prefect.io"]
+    resources: ["prefectdeployments"]
+    verbs:
+      - get
+      - list
+      - watch
+      - create
+      - update
+      - patch
+      - delete
 ---
 kind: ClusterRoleBinding
 apiVersion: {{ include "common.capabilities.rbac.apiVersion" . }}
