add RBAC for deployment status/finalizers

--- a/deploy/charts/prefect-operator/templates/rbac.yaml
+++ b/deploy/charts/prefect-operator/templates/rbac.yaml
@@ -105,6 +105,17 @@ rules:
       - update
       - patch
       - delete
+  - apiGroups: ["prefect.io"]
+    resources: ["prefectdeployments/status"]
+    verbs:
+      - get
+      - patch
+      - update
+  - apiGroups: ["prefect.io"]
+    resources: ["prefectdeployments/finalizers"]
+    verbs:
+      - update
+
 ---
 kind: ClusterRoleBinding
 apiVersion: {{ include "common.capabilities.rbac.apiVersion" . }}
