--- a/.mise.toml
+++ b/.mise.toml
@@ -2,21 +2,21 @@
 actionlint = "1.7.7"
 ginkgo = '2.23.4'
 golang = '1.24'
-golangci-lint = "2.3.0"
-"go:golang.org/x/tools/cmd/goimports" = "0.35.0"
+golangci-lint = "2.4.0"
+"go:golang.org/x/tools/cmd/goimports" = "0.36.0"
 'go:fybrik.io/crdoc' = 'latest'
 helm = "3.18"
 helm-ct = "3.13.0"
 helm-docs = "1.14.2"
-kube-controller-tools = "0.18.0"
-kubectl = "1.33"
+kube-controller-tools = "0.19.0"
+kubectl = "1.34"
 kustomize = "5.7.1"
-pre-commit = "4.2.0"
-setup-envtest = "0.21.0"
-shellcheck = '0.10.0'
+pre-commit = "4.3.0"
+setup-envtest = "0.22.0"
+shellcheck = "0.11.0"
 yamllint = "1.37.1"
 yq = "4.47.1"
-go = "1.24"
+go = "1.25"
 
 [settings]
 experimental = true
