--- a/deploy/charts/prefect-operator/crds/prefect.io_prefectworkpools.yaml
+++ b/deploy/charts/prefect-operator/crds/prefect.io_prefectworkpools.yaml
@@ -62,6 +62,10 @@ spec:
           spec:
             description: PrefectWorkPoolSpec defines the desired state of PrefectWorkPool
             properties:
+              baseJobTemplate:
+                description: Base job template for flow runs on this Work Pool
+                type: object
+                x-kubernetes-preserve-unknown-fields: true
               deploymentLabels:
                 additionalProperties:
                   type: string
@@ -2049,6 +2053,18 @@ spec:
                   - type
                   type: object
                 type: array
+              id:
+                description: Id is the workPool ID from Prefect
+                type: string
+              lastSyncTime:
+                description: LastSyncTime is the last time the workPool was synced
+                  with Prefect
+                format: date-time
+                type: string
+              observedGeneration:
+                description: ObservedGeneration tracks the last processed generation
+                format: int64
+                type: integer
               ready:
                 description: Ready is true if the work pool is ready to accept work
                 type: boolean
@@ -2057,6 +2073,9 @@ spec:
                   ready
                 format: int32
                 type: integer
+              specHash:
+                description: SpecHash tracks changes to the spec to minimize API calls
+                type: string
               version:
                 description: Version is the version of the Prefect Worker that is
                   currently running
