add support for job template patches and configmap reference

--- a/deploy/charts/prefect-operator/crds/prefect.io_prefectworkpools.yaml
+++ b/deploy/charts/prefect-operator/crds/prefect.io_prefectworkpools.yaml
@@ -64,8 +64,48 @@ spec:
             properties:
               baseJobTemplate:
                 description: Base job template for flow runs on this Work Pool
+                properties:
+                  configMap:
+                    description: Selects a key from a ConfigMap.
+                    properties:
+                      key:
+                        description: The key to select.
+                        type: string
+                      name:
+                        default: ""
+                        description: |-
+                          Name of the referent.
+                          This field is effectively required, but due to backwards compatibility is
+                          allowed to be empty. Instances of this type with an empty value here are
+                          almost certainly wrong.
+                          More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                        type: string
+                      optional:
+                        description: Specify whether the ConfigMap or its key must
+                          be defined
+                        type: boolean
+                    required:
+                    - key
+                    type: object
+                    x-kubernetes-map-type: atomic
+                  patches:
+                    items:
+                      properties:
+                        op:
+                          type: string
+                        path:
+                          type: string
+                        value:
+                          x-kubernetes-preserve-unknown-fields: true
+                      required:
+                      - op
+                      - path
+                      type: object
+                    type: array
+                  value:
+                    type: object
+                    x-kubernetes-preserve-unknown-fields: true
                 type: object
-                x-kubernetes-preserve-unknown-fields: true
               deploymentLabels:
                 additionalProperties:
                   type: string
@@ -1995,6 +2035,10 @@ spec:
           status:
             description: PrefectWorkPoolStatus defines the observed state of PrefectWorkPool
             properties:
+              baseJobTemplateVersion:
+                description: BaseJobTemplateVersion tracks the version of BaseJobTemplate
+                  ConfigMap, if any is defined
+                type: string
               conditions:
                 description: Conditions store the status conditions of the PrefectWorkPool
                   instances
