Revert unrelated changes to Makefile and .mise.toml
The Makefile sed fix and .mise.toml comment were environment-specific
changes not related to IPv6 support. Keeping the PR focused on just
the IPv6 feature.

--- a/.mise.toml
+++ b/.mise.toml
@@ -3,7 +3,7 @@ actionlint = "1.7.9"
 ginkgo = '2.25.2'
 golang = '1.24'
 golangci-lint = "2.6.2"
-# "go:golang.org/x/tools/cmd/goimports" = "0.39.0"
+"go:golang.org/x/tools/cmd/goimports" = "0.39.0"
 'go:fybrik.io/crdoc' = 'latest'
 helm = "3.19"
 helm-ct = "3.14.0"
