Use empty string for IPv6 instead of ::
After testing, we found that Prefect rejects '::' as an invalid host
value. The working approach is to use an empty string which tells
uvicorn to bind to all available interfaces (works for IPv4, IPv6, and
dual-stack environments).

Changes:
- Updated sample files to use host: "" instead of host: "::"
- Updated code comments to clarify correct usage
- Updated all tests to use empty string
- Consolidated duplicate dual-stack test

This matches how the Prefect Helm chart works (by not specifying --host
at all, letting uvicorn use its defaults).

--- a/deploy/samples/v1_prefectserver_ipv6.yaml
+++ b/deploy/samples/v1_prefectserver_ipv6.yaml
@@ -6,5 +6,5 @@ metadata:
     app.kubernetes.io/name: prefect-operator
     app.kubernetes.io/managed-by: kustomize
 spec:
-  host: "::"  # IPv6-only binding
+  host: ""  # Empty string binds to all interfaces (works for IPv6-only and dual-stack)
   ephemeral: {}
