--- a/deploy/charts/prefect-operator/crds/prefect.io_prefectservers.yaml
+++ b/deploy/charts/prefect-operator/crds/prefect.io_prefectservers.yaml
@@ -1665,7 +1665,8 @@ spec:
                 description: |-
                   Host defines the host address to bind the Prefect Server to.
                   Defaults to "0.0.0.0" for IPv4 compatibility.
-                  Use "::" for IPv6-only environments, or "" for dual-stack.
+                  Use "" (empty string) to bind to all interfaces for IPv6-only or dual-stack environments.
+                  Note: Prefect does not accept "::" as a valid host value.
                 type: string
               image:
                 description: Image defines the exact image to deploy for the Prefect
