--- a/deploy/samples/v1_prefectserver_dualstack.yaml
+++ b/deploy/samples/v1_prefectserver_dualstack.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: prefect.io/v1
 kind: PrefectServer
 metadata:
@@ -6,7 +7,7 @@ metadata:
     app.kubernetes.io/name: prefect-operator
     app.kubernetes.io/managed-by: kustomize
 spec:
-  host: ""  # Empty string for dual-stack (uvicorn binds to all interfaces)
+  host: "" # Empty string for dual-stack (uvicorn binds to all interfaces)
   sqlite:
-    storageClassName: standard
+    storageClassName: local-path
     size: 1Gi
